--- a/style/style.css
+++ b/style/style.css
@@ -1,19 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+/* font-family: 'Roboto', sans-serif; */
+
+
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
 body {
     margin: 0;
 }
 
+
 #container {
     display: grid;
-    grid-template-rows: 15vh 5vh 20vh 5vh 40vh 5vh 10vh;
-    grid-template-columns: 2fr 8fr 1fr 8fr 2fr;
+    grid-template-rows: 20vh 15vh 50vh 15vh;
+    grid-template-columns: 1fr 10fr 1fr 10fr 1fr;
+}
+
+#container img {
+    height: 85%;
+    width: 100%;
 }
 
 #container .head {
-    grid-column: 1/5;
+    grid-column: 1/6;
     grid-row: 1/2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #container .footer {
-    grid-column: 1/5;
-    grid-row: 7/8;
+    grid-column: 1/6;
+    grid-row: 4/5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#container .twin {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#container .tlin {
+    grid-column: 4/5;
+    grid-row: 2/3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#container .imgwin {
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+
+#container .imglin {
+    grid-column: 4/5;
+    grid-row: 3/4;
 }
