--- a/style/style.css
+++ b/style/style.css
@@ -4,62 +4,174 @@
 
 * {
     font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    transition: all 0.5s;
+}
+
+a {
+    color: #000;
+    text-decoration: none;
 }
 
 body {
     margin: 0;
 }
 
+.titulo {
+    text-decoration: none;
+}
 
-#container {
+#container-main {
     display: grid;
-    grid-template-rows: 20vh 15vh 50vh 15vh;
+    grid-template-rows: 20vh 10vh 65vh 5vh;
     grid-template-columns: 1fr 10fr 1fr 10fr 1fr;
 }
 
-#container img {
-    height: 85%;
-    width: 100%;
+#container-main img {
+    max-height: 100%;
+    max-width: 100%;
+    border: 2px solid #000;
 }
 
-#container .head {
-    grid-column: 1/6;
+#container-main img:hover {
+    padding: 5px;
+}
+
+#container-main .imglin img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+
+.head {
+    grid-column: 1/100;
     grid-row: 1/2;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-#container .footer {
-    grid-column: 1/6;
+
+.footer {
+    grid-column: 1/100;
+    grid-row: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+
+#container-main .twin {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#container-main .tlin {
+    grid-column: 4/5;
+    grid-row: 2/3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#container-main .imgwin {
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+
+#container-main .imglin {
+    grid-column: 4/5;
+    grid-row: 3/4;
+    display: flex;
+    justify-content: center;
+}
+
+
+
+/* Windows */
+
+#container-win {
+    display: grid;
+    grid-template-rows: 10vh 10vh 20vh 40vh 5vh;
+    grid-template-columns: 1fr 10fr 1fr 10fr 1fr;
+}
+
+#container-win .windowsnav {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    text-align: center;
+    text-decoration: underline;
+}
+
+#container-win .windowsnav :hover {
+    font-size: 28px;
+}
+
+#container-win .linuxnav {
+    grid-column: 4/5;
+    grid-row: 2/3;
+    text-align: center;
+}
+
+#container-win .linuxnav :hover {
+    font-size: 28px;
+}
+
+#container-win .intro {
+    grid-column: 2/5;
+    grid-row: 3/4;
+}
+
+#container-win #grid-winimg {
+    grid-column: 2/5;
     grid-row: 4/5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-rows: 20vh 10vh 10vh;
+    grid-template-columns: 1fr 2fr 1fr;
+    background-color: rgb(255, 0, 0);    
 }
 
-#container .twin {
+#container-win #grid-winimg .win11 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+#container-win #grid-winimg .win11 img {
+    width: 100%;
+    height: 100%;
+}
+
+#container-win #grid-winimg .win8 {
+    grid-column: 1/2;
+    grid-row: 2/4;
+}
+
+#container-win #grid-winimg .win8 img {
+    width: 100%;
+    height: 100%;
+}
+
+#container-win #grid-winimg .win10 {
     grid-column: 2/3;
-    grid-row: 2/3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    grid-row: 1/4;
 }
 
-#container .tlin {
-    grid-column: 4/5;
-    grid-row: 2/3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#container-win #grid-winimg .win10 img {
+    width: 100%;
+    height: 100%;
 }
 
-#container .imgwin {
-    grid-column: 2/3;
-    grid-row: 3/4;
+#container-win #grid-winimg .win7 {
+    grid-column: 3/4;
+    grid-row: 1/2;
 }
 
-#container .imglin {
-    grid-column: 4/5;
-    grid-row: 3/4;
+#container-win #grid-winimg .win7 img {
+    width: 100%;
+    height: 100%;
 }
+
+/* Linux */
