--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@
     transition: all 0.5s;
 }
 
-a {
+h1 a, h2 a {
     color: #000;
     text-decoration: none;
 }
@@ -106,7 +106,7 @@ body {
     text-decoration: underline;
 }
 
-#container-win .windowsnav :hover {
+.windowsnav :hover {
     font-size: 28px;
 }
 
@@ -116,11 +116,11 @@ body {
     text-align: center;
 }
 
-#container-win .linuxnav :hover {
+.linuxnav :hover {
     font-size: 28px;
 }
 
-#container-win .intro {
+.intro {
     grid-column: 2/5;
     grid-row: 3/4;
 }
@@ -175,3 +175,76 @@ body {
 }
 
 /* Linux */
+
+#container-lin {
+    display: grid;
+    grid-template-rows: 10vh 10vh 20vh 30vh 30vh 35vh 15vh 5vh;
+    grid-template-columns: 1fr 10fr 1fr 10fr 1fr;
+}
+
+#container-lin .windowsnav {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    text-align: center;
+}
+
+#container-lin .linuxnav {
+    grid-column: 4/5;
+    grid-row: 2/3;
+    text-align: center;
+    text-decoration: underline;
+}
+
+#container-lin .distros {
+    grid-column: 2/5;
+    grid-row: 4/5;
+}
+
+#container-lin .fotoarch {
+    grid-column: 2/3;
+    grid-row: 5/6;
+}
+
+#container-lin .fotoarch img {
+    max-height: 100%;
+    max-height: 100%;
+}
+
+#container-lin .fotoubuntu {
+    grid-column: 3/5;
+    grid-row: 5/6;
+}
+
+#container-lin .fotoubuntu img {
+    max-height: 100%;
+    max-height: 100%;
+}
+
+#container-lin .fotomint {
+    grid-column: 2/4;
+    grid-row: 6/7;
+    margin-top: 50px;
+}
+
+#container-lin .fotomint img {
+    max-height: 100%;
+    max-height: 100%;
+}
+
+#container-lin .fotodeb {
+    grid-column: 3/5;
+    grid-row: 6/7;
+    margin-top: 50px;
+    margin-left: 20%;
+}
+
+#container-lin .fotodeb img {
+    max-height: 100%;
+    max-height: 100%;
+}
+
+#container-lin .masinfo {
+    margin-top: 25px;
+    grid-column: 2/5;
+    grid-row: 7/8;
+}
