--- a/style/style.css
+++ b/style/style.css
@@ -95,7 +95,7 @@ body {
 
 #container-win {
     display: grid;
-    grid-template-rows: 10vh 10vh 20vh 40vh 5vh;
+    grid-template-rows: 10vh 10vh 20vh 90vh 10vh 5vh;
     grid-template-columns: 1fr 10fr 1fr 10fr 1fr;
 }
 
@@ -129,9 +129,7 @@ body {
     grid-column: 2/5;
     grid-row: 4/5;
     display: grid;
-    grid-template-rows: 20vh 10vh 10vh;
-    grid-template-columns: 1fr 2fr 1fr;
-    background-color: rgb(255, 0, 0);    
+    grid-template-rows: auto auto auto;
 }
 
 #container-win #grid-winimg .win11 {
@@ -140,8 +138,8 @@ body {
 }
 
 #container-win #grid-winimg .win11 img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #container-win #grid-winimg .win8 {
@@ -150,18 +148,18 @@ body {
 }
 
 #container-win #grid-winimg .win8 img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #container-win #grid-winimg .win10 {
     grid-column: 2/3;
-    grid-row: 1/4;
+    grid-row: 1/2;
 }
 
 #container-win #grid-winimg .win10 img {
-    width: 100%;
-    height: 100%;
+    max-width: 60%;
+    max-height: 60%;
 }
 
 #container-win #grid-winimg .win7 {
@@ -170,8 +168,39 @@ body {
 }
 
 #container-win #grid-winimg .win7 img {
-    width: 100%;
-    height: 100%;
+    max-width: 80%;
+    max-height: 80%;
+}
+
+#container-win #grid-winimg .winxp {
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+#container-win #grid-winimg .winxp img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#container-win #grid-winimg .vista {
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+
+#container-win #grid-winimg .vista img {
+    max-width: 75%;
+    max-height: 75%;
+}
+
+#container-win #grid-winimg div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#container-win .antesfinal {
+    grid-column: 2/5;
+    grid-row: 5/6;
 }
 
 /* Linux */
